css/style.css
* {
	box-sizing: border-box;
	color:white;
}

body {
	font-family: 'Roboto', sans-serif;
	margin: 0;px
	padding: 0px;
	min-height:100vh;
	max-width: 100%;
	background-color: black;
	color:white;
}

/* mainpage design */

.search {
	display: flex;
	position: sticky;
	width: 100%;
	top: 1px;
}

input {
	flex: 10;
	width: 100%;
	height: 40px;
	font-size: 25px;
	padding: 10px;
	border: none;
}
input,
textarea {
	margin: 0px;
	background-color: black;
	color:white;
}

.search button {
	flex: 1;
	background-color: blue;
	border-radius: 5px;
}

.btn {
	display: flex;
	justify-content: center;
	height: 100%;
	align-items: flex-end;
}

.add {
	position: fixed;
	bottom: 10px;
}

.notes {
	display: grid;
	grid-template-columns: repeat(2, auto);
	grid-gap: 10px;
	margin: 30px 0px;
}

.notes div h1 {
	font-size: 25px;
	font-weight: bolder;
	text-align: center;
}

.notes div h4 {
	font-size: 10px;
	text-align: center;
	transform: translateY(-15px);
	font-weight: bolder;
}

.notes div p {
	font-size: 20px;
	font-weight: bolder;
	transform: translateY(-20px);
}

.eachnote {
	max-height: 25vh;
	max-width: 50vh;
	border: 1px solid white;
	border-radius: 10px;

	overflow: hidden;
	text-align: center;
	cursor: pointer
}

.nocontentDiv {
	display: grid;
	place-items: center;
}
.nocontent {
	font-weight: bolder;
}

.alert {
	font-weight: bolder;
	text-align: center;
	display: block;
	width: 100%;
	color: #333;
}

/* noteinput page design */

.noteinputpage {
	display: none;
}

textarea {
	width: 100%;
	height: 80vh;
	font-size: 25px;
	padding: 10px;
	border: none;
}

.savebtn {
	display: block;
	background-color: blue;
	color: white;
	width: 70%;
	margin: auto;
	transform: translateY(20px);
	padding: 10px;
	font-size: 20px;
	border: none;
}

/*  singlenotepage design */

.singlenotepage {
	display: none;
	background-color: black;
	height:100%;
	max-width: 100%;
	margin: 1rem;

}

.singlenotetitle {
	text-align: center;
	margin-top: 1em;
}

.singlenotedate {
	font-style: italic;
	font-weight: 800;
}

.singlenotebody {
	font-weight: 600;
}

.homediv {
	display: flex;
	justify-content: center;
}
.home {
	position: fixed;
	bottom: 10px;
}

